--- a/templates/bugs_edit.html
+++ b/templates/bugs_edit.html
@@ -13,7 +13,7 @@ get_flashed_messages() %}
 
 {% endfor %}
 
-<h1>Add Bug</h1>
+<h1>Edit Bug</h1>
 <br />
 <form method="POST">
   {{ form.hidden_tag() }} {{ form.title.label(class="form-label") }} {{
